# Freelance_FastAPI

./: Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
alembic/: env.py
app/: database.py  dependencies.py  main.py
app/base/decorators/: transaction.py
app/constants/: urls.py
app/crud/customer/: customer.py
app/crud/freelancer/: freelancer.py
app/models/customer/: customer.py
app/models/freelancer/: freelancer.py
app/models/order/: order.py
app/models/user/: user.py
app/routers/customer/: customer.py  customer_service.py
app/routers/freelancer/: freelancer.py  freelancer_service.py
app/schemas/customer/: customer_create_schema.py  customer_get_schema.py  customer_update_schema.py
app/schemas/freelacner/: freelancer_create_schema.py  freelancer_get_schema.py  freelancer_update_schema.py
app/services/: mail.py  redis.py
scripts/: start.sh
