[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.6"}
rabbitmq = "^0.2.0"
aio-pika = "^9.5.4" 
uvicorn = "^0.34.0"
langchain = "^0.3.14"
langchain-openai = "^0.3.0"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
sqlalchemy = "^2.0.37"
python-dotenv = "^1.0.1"
email-validator = "^2.2.0"
sendgrid = "^6.11.0"
psycopg2 = "^2.9.10"
alembic = "^1.14.0"
redis = "^5.2.1"
itsdangerous = "^2.2.0"
autoflake = "^2.3.1"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
slowapi = "^0.1.9"
asyncpg = "^0.30.0"
pandas = "^2.2.3"
passlib = "^1.7.4"
openpyxl = "^3.1.5"
openai = "^1.61.0"
celery = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
